# tranquility

./: .pre-commit-config.yaml  Dockerfile  game.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: pr_checks.yaml
game/: __init__.py  board.py  config.py  game_setup.py  player.py
players/: greedy_player.py  new_player_template.py  tommy_agent.py
