[project]
name = "tranquility"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gianmarco Genalti", email = "gianmarco.genalti@polimi.it"},
]
dependencies = [
    "Bottleneck>=1.3.8",
    "numpy>=1.26.4",
    "tqdm>=4.66.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.8.0",
]
